--- a/index.html
+++ b/index.html
@@ -65,7 +65,11 @@
           </div>
 
           <div class="col-1-of-2">
-            Image composition
+            <div class="composition">
+              <img src="img/nat-1-large.jpg" alt="Mountains photo" class="composition__photo composition__photo--p1">
+              <img src="img/nat-2-large.jpg" alt="Road photo" class="composition__photo composition__photo--p2">
+              <img src="img/nat-3-large.jpg" alt="Human on mountain" class="composition__photo composition__photo--p3">
+            </div>
           </div>
         </div>
       </section>
