--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="navigation">
       <input type="checkbox" class="navigation__checkbox" id="navi-toggle" />
       <label for="navi-toggle" class="navigation__button">
-        <span class="navigation__icon">&nbsp;</span> 
+        <span class="navigation__icon">&nbsp;</span>
       </label>
 
       <div class="navigation__background">&nbsp;</div>
@@ -467,6 +467,46 @@
       </div>
     </footer>
 
+    <div class="popup">
+      <div class="popup__content">
+        <div class="popup__left">
+          <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img" />
+          <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img" />
+        </div>
+        <div class="popup__right">
+          <h2 class="heading-secondary u-margin-bottom-small">
+            Start booking now
+          </h2>
+          <h2 class="heading-tertiary u-margin-bottom-small">
+            Important &ndash; Please read these terms before booking
+          </h2>
+          <p class="popup__text">
+            Did shy say mention enabled through elderly improve. As at so
+            believe account evening behaved hearted is. House is tiled we aware.
+            It ye greatest removing concerns an overcame appetite. Manner result
+            square father boy behind its his. Their above spoke match ye mr
+            right oh as first. Be my depending to believing perfectly concealed
+            household. Point could to built no hours smile sense. Out too the
+            been like hard off. Improve enquire welcome own beloved matters her.
+            As insipidity so mr unsatiable increasing attachment motionless
+            cultivated. Addition mr husbands unpacked occasion he oh. Is
+            unsatiable if projecting boisterous insensible. It recommend be
+            resolving pretended middleton. Is post each that just leaf no. He
+            connection interested so we an sympathize advantages. To said is it
+            shed want do. Occasional middletons everything so to. Have spot part
+            for his quit may. Enable it is square my an regard. Often merit
+            stuff first oh up hills as he. Servants contempt as although
+            addition dashwood is procured. Interest in yourself an do of
+            numerous feelings cheerful confined. By in no ecstatic wondered
+            disposal my speaking. Direct wholly valley or uneasy it at really.
+            Sir wish like said dull and need make. Sportsman one bed departure
+            rapturous situation disposing his. Off say yet ample ten ought
+            hence. Depending in new
+          </p>
+          <a href="#" class="btn btn--green">Book now</a>
+        </div>
+      </div>
+    </div>
     <!-- <section class="grid-test">
 
       <div class="row">
