--- a/index.html
+++ b/index.html
@@ -531,17 +531,7 @@
             As insipidity so mr unsatiable increasing attachment motionless
             cultivated. Addition mr husbands unpacked occasion he oh. Is
             unsatiable if projecting boisterous insensible. It recommend be
-            resolving pretended middleton. Is post each that just leaf no. He
-            connection interested so we an sympathize advantages. To said is it
-            shed want do. Occasional middletons everything so to. Have spot part
-            for his quit may. Enable it is square my an regard. Often merit
-            stuff first oh up hills as he. Servants contempt as although
-            addition dashwood is procured. Interest in yourself an do of
-            numerous feelings cheerful confined. By in no ecstatic wondered
-            disposal my speaking. Direct wholly valley or uneasy it at really.
-            Sir wish like said dull and need make. Sportsman one bed departure
-            rapturous situation disposing his. Off say yet ample ten ought
-            hence. Depending in new
+            resolving pretended middleton. Is post each that just 
           </p>
           <a href="#" class="btn btn--green">Book now</a>
         </div>
